syntax = "proto2";

package bacs.problem.single;

message IntermediateResult {
  enum State {
    INITIALIZED = 1;
    BUILDING = 2;
    TESTING = 3;
  }
  required State state = 1;
  optional string test_group_id = 2;
  optional string test_id = 3;
}
